fixing spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -3593,6 +3593,7 @@ body {
         padding-top: 5%;
         padding-left: 5%;
         padding-right: 5%;
+        margin: 200px 0;
       }
       .page-content .button {
         margin: 20px auto 0;
@@ -3606,7 +3607,7 @@ body {
       }
       .cta-arrow {
         text-align: left;
-        padding-left: 20px;
+        /* padding-left: 20px; */
         background: none;
         background-size: 5.9%;
         background-position-x: 50px;
@@ -3922,7 +3923,7 @@ body {
     }
     .page-content .row {
       display: flex !important;
-      margin: 100px auto;
+      margin: 200px auto;
     }
     .page-content img {
       max-height: 600px;
